Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36897

QNetworkConfigurationManager crashes when recreating QApplication and QWebView

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.3.1
    • 4.8.5, 5.2.0, 5.2.1, 5.3.0
    • None
    • Windows 7, Kubuntu 13.10

      void main(int argc, char *argv[])
      {
          for (int i = 0; i < 2; i++)
          {
              QApplication app(argc, argv);
              QMainWindow mainWindow;
              QWebView* webView = new QWebView(&mainWindow);
              mainWindow.setCentralWidget(webView);
              webView->load(QUrl(QLatin1String("http://www.google.com/")));
              mainWindow.show();
              app.exec();
          }
      }
      

      Provides the following log:
      QObject::connect: Cannot connect (null)::configurationAdded(QNetworkConfiguration) to QNetworkConfigurationManager::configurationAdded(QNetworkConfiguration)
      QObject::connect: Cannot connect (null)::configurationRemoved(QNetworkConfiguration) to QNetworkConfigurationManager::configurationRemoved(QNetworkConfiguration)
      QObject::connect: Cannot connect (null)::configurationChanged(QNetworkConfiguration) to QNetworkConfigurationManager::configurationChanged(QNetworkConfiguration)
      QObject::connect: Cannot connect (null)::onlineStateChanged(bool) to QNetworkConfigurationManager::onlineStateChanged(bool)
      QObject::connect: Cannot connect (null)::configurationUpdateComplete() to QNetworkConfigurationManager::updateCompleted()

      Stack trace

      	Qt5Cored.dll!QAtomicOps<QMutexData *>::testAndSetRelaxed(QMutexData * & _q_value, QMutexData * expectedValue, QMutexData * newValue) Line 349	C++
       	Qt5Cored.dll!QGenericAtomicOps<QAtomicOps<QMutexData *> >::testAndSetAcquire<QMutexData *,QMutexData *>(QMutexData * & _q_value, QMutexData * expectedValue, QMutexData * newValue) Line 148	C++
       	Qt5Cored.dll!QBasicAtomicPointer<QMutexData>::testAndSetAcquire(QMutexData * expectedValue, QMutexData * newValue) Line 225	C++
       	Qt5Cored.dll!QBasicMutex::fastTryLock() Line 85	C++
       	Qt5Cored.dll!QMutex::lock() Line 212	C++
       	Qt5Cored.dll!QMutexLocker::QMutexLocker(QBasicMutex * m) Line 131	C++
       	Qt5Networkd.dll!QNetworkConfigurationManagerPrivate::enablePolling() Line 508	C++
       	Qt5Networkd.dll!QNetworkConfigurationManager::QNetworkConfigurationManager(QObject * parent) Line 243	C++
       	Qt5Networkd.dll!QNetworkAccessManager::createRequest(QNetworkAccessManager::Operation op, const QNetworkRequest & req, QIODevice * outgoingData) Line 1055	C++
       	Qt5Networkd.dll!QNetworkAccessManager::get(const QNetworkRequest & request) Line 685	C++
       	Qt5WebKitd.dll!WebCore::QNetworkReplyHandler::sendNetworkRequest(QNetworkAccessManager * manager, const WebCore::ResourceRequest & request) Line 737	C++
       	Qt5WebKitd.dll!WebCore::QNetworkReplyHandler::start() Line 776	C++
       	Qt5WebKitd.dll!WebCore::QNetworkReplyHandlerCallQueue::flush() Line 249	C++
       	Qt5WebKitd.dll!WebCore::QNetworkReplyHandlerCallQueue::push(void (void) * method) Line 216	C++
       	Qt5WebKitd.dll!WebCore::QNetworkReplyHandler::QNetworkReplyHandler(WebCore::ResourceHandle * handle, WebCore::QNetworkReplyHandler::LoadType loadType, bool deferred) Line 457	C++
       	Qt5WebKitd.dll!WebCore::ResourceHandle::start(WebCore::NetworkingContext * context) Line 111	C++
       	Qt5WebKitd.dll!WebCore::ResourceHandle::create(WebCore::NetworkingContext * context, const WebCore::ResourceRequest & request, WebCore::ResourceHandleClient * client, bool defersLoading, bool shouldContentSniff) Line 81	C++
       	Qt5WebKitd.dll!WebCore::MainResourceLoader::loadNow(WebCore::ResourceRequest & r) Line 606	C++
       	Qt5WebKitd.dll!WebCore::MainResourceLoader::load(const WebCore::ResourceRequest & r, const WebCore::SubstituteData & substituteData) Line 646	C++
       	Qt5WebKitd.dll!WebCore::DocumentLoader::startLoadingMainResource() Line 882	C++
       	Qt5WebKitd.dll!WebCore::FrameLoader::continueLoadAfterWillSubmitForm() Line 2213	C++
       	Qt5WebKitd.dll!WebCore::FrameLoader::continueLoadAfterNavigationPolicy(const WebCore::ResourceRequest & __formal, WTF::PassRefPtr<WebCore::FormState> formState, bool shouldContinue) Line 2814	C++
       	Qt5WebKitd.dll!WebCore::FrameLoader::callContinueLoadAfterNavigationPolicy(void * argument, const WebCore::ResourceRequest & request, WTF::PassRefPtr<WebCore::FormState> formState, bool shouldContinue) Line 2684	C++
       	Qt5WebKitd.dll!WebCore::PolicyCallback::call(bool shouldContinue) Line 103	C++
       	Qt5WebKitd.dll!WebCore::PolicyChecker::continueAfterNavigationPolicy(WebCore::PolicyAction policy) Line 168	C++
       	Qt5WebKitd.dll!WebCore::FrameLoaderClientQt::callPolicyFunction(void (WebCore::PolicyAction) * function, WebCore::PolicyAction action) Line 243	C++
       	Qt5WebKitd.dll!WebCore::FrameLoaderClientQt::dispatchDecidePolicyForNavigationAction(void (WebCore::PolicyAction) * function, const WebCore::NavigationAction & action, const WebCore::ResourceRequest & request, WTF::PassRefPtr<WebCore::FormState> __formal) Line 1285	C++
       	Qt5WebKitd.dll!WebCore::PolicyChecker::checkNavigationPolicy(const WebCore::ResourceRequest & request, WebCore::DocumentLoader * loader, WTF::PassRefPtr<WebCore::FormState> formState, void (void *, const WebCore::ResourceRequest &, WTF::PassRefPtr<WebCore::FormState>, bool) * function, void * argument) Line 90	C++
       	Qt5WebKitd.dll!WebCore::FrameLoader::loadWithDocumentLoader(WebCore::DocumentLoader * loader, WebCore::FrameLoadType type, WTF::PassRefPtr<WebCore::FormState> prpFormState) Line 1395	C++
       	Qt5WebKitd.dll!WebCore::FrameLoader::load(WebCore::DocumentLoader * newDocumentLoader) Line 1335	C++
       	Qt5WebKitd.dll!WebCore::FrameLoader::load(const WebCore::FrameLoadRequest & passedRequest) Line 1285	C++
       	Qt5WebKitd.dll!QWebFrameAdapter::load(const QNetworkRequest & req, QNetworkAccessManager::Operation operation, const QByteArray & body) Line 167	C++
      >	Qt5WebKitWidgetsd.dll!QWebFrame::load(const QNetworkRequest & req, QNetworkAccessManager::Operation operation, const QByteArray & body) Line 434	C++
       	Qt5WebKitWidgetsd.dll!QWebFrame::load(const QUrl & url) Line 418	C++
       	Qt5WebKitWidgetsd.dll!QWebView::load(const QUrl & url) Line 300	C++
       	qpwwebview.dll!QPwWebView::loadGisUrl() Line 69	C++
       	qpwwebview.dll!QPwWebView::executeGisCommand(const QString & command) Line 104	C++
       	qpwwebview.dll!QPwWebView::qt_static_metacall(QObject * _o, QMetaObject::Call _c, int _id, void * * _a) Line 145	C++
       	qpwwebview.dll!QPwWebView::qt_metacall(QMetaObject::Call _c, int _id, void * * _a) Line 202	C++
       	qpwwebview.dll!QAxServerBase::Invoke(long,struct _GUID const &,unsigned long,unsigned short,struct tagDISPPARAMS *,struct tagVARIANT *,struct tagEXCEPINFO *,unsigned int *)	Unknown
       	mfc110u.dll!COleDispatchDriver::InvokeHelperV(long dwDispID, unsigned short wFlags, unsigned short vtRet, void * pvRet, const unsigned char * pbParamInfo, char * argList) Line 404	C++
       	mfc110u.dll!COleControlSite::InvokeHelperV(long dwDispID, unsigned short wFlags, unsigned short vtRet, void * pvRet, const unsigned char * pbParamInfo, char * argList) Line 1092	C++
       	mfc110u.dll!CWnd::InvokeHelper(long dwDispID, unsigned short wFlags, unsigned short vtRet, void * pvRet, const unsigned char * pbParamInfo, ...) Line 391	C++
       	PowerExplorer.exe!00ba8574()	Unknown
       	[Frames below may be incorrect and/or missing, no symbols loaded for PowerExplorer.exe]	
       	PowerExplorer.exe!00b98ad4()	Unknown
       	usp10.dll!751f6aad()	Unknown
       	usp10.dll!751e7446()	Unknown
       	usp10.dll!751f4228()	Unknown
       	usp10.dll!751f6958()	Unknown
       	usp10.dll!751e8c0b()	Unknown
       	usp10.dll!751e7a53()	Unknown
       	lpk.dll!75165465()	Unknown
       	ntdll.dll!776cf905()	Unknown
       	KernelBase.dll!750edd54()	Unknown
       	Shr1090u.dll!0291948e()	Unknown
       	Shr1090u.dll!0297a23c()	Unknown
       	Shr1090u.dll!029ae2f9()	Unknown
       	msvcr110.dll!malloc(unsigned int size) Line 91	C
       	mfc110u.dll!operator new(unsigned int nSize) Line 323	C++
       	CPowerInterop.dll!72616dee()	Unknown
       	CPowerInterop.dll!72616eea()	Unknown
       	CPowerInterop.dll!7261cc61()	Unknown
       	user32.dll!75ac6d91()	Unknown
       	ntdll.dll!7771e63f()	Unknown
       	mfc110u.dll!CWnd::WindowProc(unsigned int message, unsigned int wParam, long lParam) Line 2138	C++
       	mfc110u.dll!AfxCallWndProc(CWnd * pWnd, HWND__ * hWnd, unsigned int nMsg, unsigned int wParam, long lParam) Line 293	C++
       	001aeed4()	Unknown
      

        1. initialize-guard.diff
          0.5 kB
          Peter Hartmann
        2. QtCore-FixQNetworkConfigManagerCrash.patch
          0.5 kB
          Anton Baskanov
        For Gerrit Dashboard: QTBUG-36897
        # Subject Branch Project Status CR V

            nierob Nierob
            qtcomsupport Qt Support
            Votes:
            3 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes